application/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-microservice
  template:
    metadata:
      labels:
        app: spring-microservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: spring-microservice
          image: registry.gitlab.com/dungnv08111/techcon/web-dungnv:main-6722a973-1662266320
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '20Gi'
              cpu: '4'
          volumeMounts:
            - name: log-path
              mountPath: /var/log/app
          ports:
            - name: http
              containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /demo/status
#              port: http
#            initialDelaySeconds: 20
#            periodSeconds: 15
#            failureThreshold: 6
#          livenessProbe:
#            httpGet:
#              path: /demo/status
#              port: http
#            initialDelaySeconds: 120
      volumes:
        - name: log-path
          hostPath:
            path: /var/log/app
      imagePullSecrets:
        - name: docker-repos.registry.gitlab.com-secret
