application/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: thuyenthunghoian.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: spring-microservice
                port:
                  number: 8080
