application/test.yml
apiVersion: v1
kind: Service
metadata:
  name: http-test-svc
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: http-test-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: http-test-svc
  name: http-test-svc
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: http-test-app
  template:
    metadata:
      labels:
        run: http-test-app
    spec:
      containers:
        - image: httpd
          imagePullPolicy: IfNotPresent
          name: http
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - thuyenthunghoian.com
      secretName: example-app-tls
  rules:
    - host: thuyenthunghoian.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: http-test-svc
                port:
                  number: 80
